src/features/search/searchInputs.scss
@import '../../styles/base/base';
@import '../../styles/mixins/mixins';

$_breakpoint: 1010;
$_breakpoint2: 771;

.search-bar__inputs {
    align-items: center;
    color: $color-fiord;
    display: flex;
    flex-direction: row;
    height: 4rem;
    justify-content: space-between;
    width: 100%;

    @include respond-to($_breakpoint, max) {
        flex-wrap: wrap;
    }

    @include respond-to-mobile() {
        display: block;
        height: auto;
    }

    &-date {
        flex-grow: 1;
        margin-right: 4rem;
        padding-bottom: 2.2rem;
        width: 29rem;

        @include respond-to($_breakpoint, max) {
            margin-right: 0;
            padding-bottom: 2.1rem;
            width: 25.5rem;
        }

        @include respond-to($_breakpoint2, max) {
            width: 29rem;
        }

        @include respond-to-mobile() {
            width: 100%;
        }
    }

    &-text {
        flex-grow: 1;
        margin-right: 4rem;
        position: relative;
        width: 68.1rem;

        @include respond-to($_breakpoint, max) {
            margin-right: 1rem;
        }
    }

    &-text-input {
        @include typography-body-2;

        background-image: url('../../assets/icons/magnifying-glass.svg');
        background-position: 1rem 50%;
        background-repeat: no-repeat;
        background-size: 1.6rem;
        height: 4.8rem;
        line-height: 2.2;
        padding-left: 4.1rem;
        padding-right: 3.8rem;
        width: 100%;

        @include respond-to-mobile() {
            width: 100%;
        }
    }

    &-date-input {
        @include typography-body-2;

        cursor: text;
        font-family: $font-family;
        font-size: $font-size-14;
        height: 4.8rem;
        line-height: 2.2;
        width: 100%;

        @include respond-to($_breakpoint, max) {
            width: 85%;
        }

        @include respond-to($_breakpoint2, max) {
            width: 97%;
        }

        @include respond-to-mobile() {
            width: 100%;
        }

        &-label {
            @include typography-caption;

            color: $color-gull-gray;
            line-height: 1.6;
            position: relative;
            text-transform: uppercase;

            @include respond-to($_breakpoint, max) {
                font-size: $font-size-12;
                top: 0.45rem;
            }
        }

        &::-webkit-calendar-picker-indicator {
            appearance: none;
            background-image: url('../../assets/icons/calendar.svg');
            background-size: cover;
            cursor: pointer;
            height: 1.6rem;
            width: 1.6rem;

            &:hover {
                transform: scale(1.1);
            }
        }
    }

    &-search-button-icon {
        bottom: -0.2rem;
        height: 1.6rem;
        margin-right: 0.4rem;
        position: relative;
        width: 1.6rem;

        path {
            stroke: $color-white;
        }
    }

    &-circle-x-icon {
        height: 1.6rem;
        width: 1.6rem;

        path {
            stroke: $color-fiord;
        }
    }
}

